--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=currencies
 spring.application.key=${env.SWOP_KEY}
 spring.application.url=${env.SWOP_URL}
 
-logging.level.root=INFO
+logging.level.root=DEBUG
 logging.level.com.baeldung=TRACE
 logging.file.name=logs/app.log
 logging.file.path=logs
 
+management.endpoints.web.exposure.include=*
+
 spring.devtools.add-properties=false
+springodc.show-actuator=true
